refactor: inicialização do typeahead com lookup

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,7 +4,7 @@
       <li class="liMenu"><a routerLink="/" class="aMenu">Home</a></li>
       <li class="liMenu"><a routerLink="/produtos" class="aMenu">Lista de Produtos</a></li>
       <li class="liMenu"><a routerLink="/inserirProduto" class="aMenu">Inserir Produto</a></li>
-      <li class="liMenu"><a href="#" class="aMenu">Deletar Produto</a></li>
+      <li class="liMenu"><a routerLink="/mozaiko" class="aMenu">Mozaiko</a></li>
     </ul>
   </div>
   <div class="mobileMenu">
