--- a/src/app/components/contatos-listagem/contatos-listagem.component.html
+++ b/src/app/components/contatos-listagem/contatos-listagem.component.html
@@ -1,3 +1,4 @@
+<br />
 <div class="container">
   <table class="table table-striped" id="listaDeContatos">
     <thead class="thead-dark">
@@ -8,10 +9,12 @@
       </tr>
     </thead>
 
-    <tr *ngFor="let c of contatos" scope="row">
+    <tr *ngFor="let c of contatos" scope="row" class="testelm">
       <td>{{ c.id }}</td>
       <td>{{ c.descricao }}</td>
       <td>{{ c.status }}</td>
     </tr>
   </table>
 </div>
+
+<br />
