feat: @OutPut() emitindo do filho pro pai

--- a/src/app/components/mozaiko/mozaiko.component.html
+++ b/src/app/components/mozaiko/mozaiko.component.html
@@ -5,10 +5,9 @@
       <div class="input-group-prepend">
         <app-lookup></app-lookup>
       </div>
-      <app-typeahead></app-typeahead>
+      <app-typeahead (nameEmitter)="aparecer($event)"></app-typeahead>
     </div>
   </div>
   <div class="col-sm-6">
-
   </div>
 </div>
