--- a/src/app/components/routes/lookup-table/lookup-table.component.html
+++ b/src/app/components/routes/lookup-table/lookup-table.component.html
@@ -28,6 +28,6 @@
 <div class="text-right">
   <div class="btn-group" role="group" aria-label="Basic example">
     <a routerLink="/mozaiko"><button type="button" class="btn btn-secondary">Voltar</button></a>
-    <button [disabled]="!noHabil" type="button" class="btn btn-primary" (click)="addItem()">Adicionar item</button>
+    <button type="button" class="btn btn-primary" (click)="addItem()">Adicionar item</button>
   </div>
 </div>
