--- a/src/app/components/mozaikoComponents/typeahead/typeahead.component.html
+++ b/src/app/components/mozaikoComponents/typeahead/typeahead.component.html
@@ -1,2 +1,2 @@
 <input id="typeahead-basic" type="text" placeholder="Digite sua pesquisa" class="form-control" [(ngModel)]="model"
-  [ngbTypeahead]="search" />
+  [ngbTypeahead]="search" (keyup)="incrementa($event.target.value)" />
