feat: simulação de lookup e typeahead concluído.

--- a/src/app/components/mozaikoComponents/lookup/lookup.component.html
+++ b/src/app/components/mozaikoComponents/lookup/lookup.component.html
@@ -1,5 +1,5 @@
 <a routerLink="/lookupTable">
-  <button type="button" class="btn btn-primary">
-    @
+  <button type="button" class="btn btn-warning">
+    <img src="assets/imgs/lupa.png" width="20px" />
   </button>
 </a>
