--- a/src/app/components/mozaiko/mozaiko.component.html
+++ b/src/app/components/mozaiko/mozaiko.component.html
@@ -1,13 +1,7 @@
-<div class="row">
-  <div class="col-sm-6">
-    <label>Pesquise</label>
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <app-lookup></app-lookup>
-      </div>
-      <app-typeahead (nameEmitter)="aparecer($event)"></app-typeahead>
-    </div>
+<label>Pesquise</label>
+<div class="input-group">
+  <div class="input-group-prepend">
+    <app-lookup></app-lookup>
   </div>
-  <div class="col-sm-6">
-  </div>
+  <app-typeahead (nameEmitter)="aparecer($event)" [dadoLookup]="descricao"></app-typeahead>
 </div>
