Feat: Adição de novos componenetes
Componentes para testes do mozaiko e pipes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,4 +3,6 @@
     <span class="badge badge-secondary">Bem vindo!</span>
   </h4>
   Navague na nossa aplicação!
+  <br />
+  {{ 2 | potencia: 3 }}
 </div>
