--- a/src/app/components/mozaikoComponents/lookup/lookup.component.html
+++ b/src/app/components/mozaikoComponents/lookup/lookup.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/lookupTable">
+<a routerLink="/lookupTable/a">
   <button type="button" class="btn btn-warning">
     <img src="assets/imgs/lupa.png" width="20px" />
   </button>
