--- a/src/app/components/mozaikoComponents/typeahead/typeahead.component.html
+++ b/src/app/components/mozaikoComponents/typeahead/typeahead.component.html
@@ -1,2 +1,11 @@
-<input id="typeahead-basic" type="text" placeholder="Digite sua pesquisa" class="form-control" [(ngModel)]="model"
-  [ngbTypeahead]="search" (keyup)="incrementa($event.target.value)" />
+<input
+  id="typeahead-basic"
+  type="text"
+  placeholder="Digite sua pesquisa"
+  class="form-control"
+  [(ngModel)]="model"
+  [ngbTypeahead]="search"
+  (keyup)="incrementa($event.target.value)"
+  [resultFormatter]="format"
+  [inputFormatter]="format"
+/>
