Feat: Adição do component receber valor com subject

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,12 @@
-<div class="container">
+<!-- <div class="container">
   <h4>
     <span class="badge badge-secondary">Bem vindo!</span>
   </h4>
   Navague na nossa aplicação!
   <br />
   {{ 2 | potencia: 3 }}
+</div> -->
+<div class="container">
+  <app-envia-valor></app-envia-valor>
+  <app-recebe-valor></app-recebe-valor>
 </div>
